language/tests/error/TypeError03.sl
toeminto piä() {
  "4" && 4;  
}  
